[package]
name = "solana-http-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "set-header"] }
base64 = "0.22"
bs58 = "0.5"
solana-sdk = "1.18"
solana-program = "1.18"
spl-token = "4.0"
ed25519-dalek = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bincode = "1.3"
